...

  func updateAvatar(with url: String) {
      imageView?.kf.setImage(with: URL(string: url))
  }

  func showLogoutConfirmation() {
      let alert = UIAlertController(title: "Вы уверены?", message: "Придется заново заходить!", preferredStyle: .alert)
      let yes = UIAlertAction(title: "Да", style: .destructive) { _ in
          ProfileLogoutService.shared.logout()
      }
      let no = UIAlertAction(title: "Нет", style: .cancel)
      alert.addAction(yes)
      alert.addAction(no)
      present(alert, animated: true)
...
